rectified role name

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ services:
 
 env:
   global:
-    - ROLE_NAME: openjdk8
+    - ROLE_NAME: googlechrome
   matrix:
     - DISTRO: centos-7
     - DISTRO: ubuntu-18.04
