additional debian platforms, pytest for google-chrome repo files

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ env:
     - DISTRO: centos-7
     - DISTRO: ubuntu-18.04
     - DISTRO: ubuntu-16.04
+    - DISTRO: debian-buster
     - DISTRO: debian-stretch
+    - DISTRO: debian-jessie
 
 addons:
   sonarcloud:
