--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 ---
-sudo: required
-
+os: linux
 dist: bionic
 
 language: python
@@ -13,7 +12,8 @@ services:
 env:
   global:
     - ROLE_NAME: googlechrome
-  matrix:
+  jobs:
+    - DISTRO: centos-8
     - DISTRO: centos-7
     - DISTRO: ubuntu-18.04
     - DISTRO: ubuntu-16.04
@@ -27,6 +27,7 @@ addons:
 
 before_install:
   - sudo apt-get update
+  - sudo apt-get upgrade -y
 
 install:
   - pip3 install molecule docker
