--- a/tasks/install_el.yml
+++ b/tasks/install_el.yml
@@ -1,7 +1,7 @@
 ---
-# tasks file for googlechrome - EL
+# tasks file for googlechrome | EL Family
 
-- name: Adding repository {{ googlechrome_repo_el }} on EL based systems.
+- name: EL Family | Adding repository {{ googlechrome_repo_el }}
   yum_repository:
     name: "{{ googlechrome_repo_el_name }}"
     description: "{{ googlechrome_repo_el_description }}"
@@ -11,7 +11,8 @@
     file: "{{ googlechrome_repo_el_filename }}"
     state: "{{ googlechrome_repo_desired_state }}"
     enabled: "{{ googlechrome_repo_el_enabled }}"
-- name: Installing {{ googlechrome_app_name }} on EL based systems.
+
+- name: EL Family | Installing {{ googlechrome_app_name }}
   yum:
     name: "{{ googlechrome_app_name }}"
     state: "{{ googlechrome_desired_state }}"
