update list of branches to for github actions build-and-test workflow

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -6,7 +6,11 @@ on:
       - 'master'
   push:
     branches:
+      - 'feature*'
       - 'feature_*'
+      - 'feature/*'
+      - 'hotfix*'
+      - 'hotfix/*'
       - 'master'
   schedule:
     - cron: '0 16 * * *'
