add FQCN to EL family tasks

--- a/tasks/install_el.yml
+++ b/tasks/install_el.yml
@@ -2,7 +2,7 @@
 # tasks file for googlechrome | EL Family
 
 - name: EL Family | Adding repository {{ googlechrome_repo_el }}
-  yum_repository:
+  ansible.builtin.yum_repository:
     name: "{{ googlechrome_repo_el_name }}"
     description: "{{ googlechrome_repo_el_description }}"
     baseurl: "{{ googlechrome_repo_el }}"
@@ -13,7 +13,7 @@
     enabled: "{{ googlechrome_repo_el_enabled }}"
 
 - name: EL Family | Installing {{ googlechrome_app_name }}
-  yum:
+  ansible.builtin.yum:
     name: "{{ googlechrome_app_name }}"
     state: "{{ googlechrome_desired_state }}"
     update_cache: yes
