--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -21,7 +21,7 @@ jobs:
   code_quality:
 
     name: SonarCloud Code Quality Check
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
 
@@ -45,7 +45,7 @@ jobs:
   build:
 
     name: Build & Test
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       max-parallel: 10
       matrix:
@@ -58,10 +58,10 @@ jobs:
       with:
         path: 'darkwizard242.googlechrome'
 
-    - name: Set up Python 3.10.0
+    - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10.0
+        python-version: '3.10'
 
     - name: Update repo cache, install python3-setuptools and required pip modules
       run: |
